# learn-rust

diesel-demo/: .env  Cargo.toml
diesel-demo/migrations/2023-01-25-175214_create_post/: up.sql
diesel-demo/src/: lib.rs  schema.rs
hello-world/src/: main.rs
options/src/: main.rs
web-server/: .env  Cargo.toml
web-server/migrations/2023-01-27-222016_create_user_table/: up.sql
web-server/migrations/2023-02-04-210320_remove_timestamp/: down.sql  up.sql
web-server/src/: db.rs  main.rs  models.rs  schema.rs
